replaced json and csv library mostly